added mollie code

--- a/WEB/appsettings.json
+++ b/WEB/appsettings.json
@@ -6,6 +6,9 @@
     }
   },
   "AllowedHosts": "*",
+  "Mollie": {
+    "ApiKey": "test_SJtwgehM5c52gTducbMqyFEuaVGDd6"
+  },
   "Auth0": {
     "Domain": "dev-2d0qiex8qdv8ggxj.us.auth0.com",
     "ClientId": "TySgVtlDzNFqcZdSuCkCDxyRnJa0s1f5",  }
