--- a/CORE/CORE.csproj
+++ b/CORE/CORE.csproj
@@ -10,4 +10,9 @@
     <Folder Include="Interfaces\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="8.0.0" />
+    <PackageReference Include="Mollie.Api" Version="3.6.0" />
+  </ItemGroup>
+
 </Project>
